// NOTE: Just wanted to play around with the protobuf syntax/scripts. Not going to use it


syntax = "proto3";
package SecretNetwork.x.tokenswap.v1;

option go_package = "github.com/enigmampc/SecretNetwork/x/tokenswap/types";
option (gogoproto.equal_all) = true;

import "third_party/proto/gogoproto/gogo.proto";

message MsgTokenSwap {
    option (gogoproto.equal) = true;

    bytes ethereum_tx_hash = 1 [
                                (gogoproto.casttype) = "github.com/enigmampc/SecretNetwork/x/tokenswap/types.EthereumTxHash",
                                (gogoproto.nullable) = false,
                                (gogoproto.moretags) = "yaml:\"ethereum_tx_hash\""
                                ];
    bytes ethereum_sender_address = 2 [
                               (gogoproto.casttype) = "github.com/enigmampc/SecretNetwork/x/tokenswap/types.EthereumAddress",
                               (gogoproto.nullable) = false,
                               (gogoproto.moretags) = "yaml:\"ethereum_sender_address\""
                               ];
    string eng_burned_amount = 3 [
                               (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
                               (gogoproto.nullable)   = false,
                               (gogoproto.moretags) = "yaml:\"eng_burned_amount\""
                               ];
    bytes secretnetwork_receiver_address = 4 [
                               (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
                               (gogoproto.nullable)   = false,
                               (gogoproto.moretags) = "yaml:\"secretnetwork_receiver_address\""
                               ];
    bytes signer_addr      = 5 [
                               (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
                               (gogoproto.nullable)   = false,
                               (gogoproto.moretags) = "yaml:\"signer_address\""
                               ];
//    EthereumTxHash string
//    EthereumSender string
//    Receiver       sdk.AccAddress
//    AmountENG      string
//    SignerAddr     sdk.AccAddress
}
//	MultisigApproveAddress sdk.AccAddress   `json:"minting_approver_address" yaml:"minting_approver_address"`
//	MintingMultiplier      sdk.Dec        `json:"minting_multiplier" yaml:"minting_multiplier"`
//	MintingEnabled         bool         	`json:"minting_enabled" yaml:"minting_enabled"`
// Params defines the set of distribution parameters.
message Params {
    option (gogoproto.goproto_stringer) = false;
    bytes multisig_approve_address        = 1 [
                               (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
                               (gogoproto.moretags) = "yaml:\"multisig_approve_address\"",
                                    (gogoproto.nullable)   = false
                                    ];
    string minting_multiplier = 2 [
                                    (gogoproto.moretags)   = "yaml:\"minting_multiplier\"",
                                    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
                                    (gogoproto.nullable)   = false
                                    ];
    bool minting_enabled = 3 [(gogoproto.moretags) = "yaml:\"minting_enabled\""];
}
